@@ -1,3 +1,9 @@
+Sun Jun 23 12:28:19 BST 2013  Colin Watson  <cjwatson@debian.org>
+
+	* src/ult_src.c (test_for_include): Return NULL immediately if
+	  buffer is NULL.
+	  (ult_src): Use this to remove a level of indentation.
+
 Sun Jun 23 11:14:27 BST 2013  Colin Watson  <cjwatson@debian.org>
 
 	Upgrade to Automake 1.13.3.
